--- a/软件设计师/计算机网络.md
+++ b/软件设计师/计算机网络.md
@@ -398,7 +398,14 @@ DNS域名系统（Domain Name System）
 
 
 
-2种DNSS
+1. 根域名服务器：并不直接把待查询的域名直接解析出IP地址，而是告诉本地域名服务器应当找顶级域名服务器的IP
+2. 顶级域名服务器：负责管理在该顶级域名服务器注册的二级域名。
+3. 权限域名服务器：负责一个“区”的域名服务器。
+4. 本地域名服务器：离用户最近的DNS，当一个主机发出DNS查询请求时，这个查询请求报文就发送给本地域名服务器。
+
+
+
+2种DNS
 
 * 在一个区中,主DNSS从自己本机的数据文件中读取该区的DNS数据信息
 
@@ -411,6 +418,45 @@ DNS域名系统（Domain Name System）
 
 
 ## 域名解析
+
+
+
+![](image.assets/域名解析.png)
+
+* 浏览器缓存
+  * 缓存大小有/时间有限制，通常情况下为几分钟到几小时不等，域名被缓存的时间限制可以**通过TTL属性设置**
+  * 缓存时间太长，一旦IP变化，会导致被客户端缓存的域名无法解析到变化后的IP地址
+  * 如果设置时间太短，会导致用户每次访问网站都要重新解析一次域名
+
+* 操作系统缓存  操作系统也有域名解析的过程
+  * Windows C:\Windows\System32\drivers\etc\hosts
+  * Linux中 /etc/hosts
+  * 用户可以将任何域名解析到任何能够访问的IP地址,利于测试
+  * 正是因为有这种本地DNS解析的规程，黑客把特定的域名解析到他指定的IP地址上，==域名劫持==
+
+* 本地域名服务器 LDNS  通常都提供给用户本地互联网接入的一个DNS解析服务
+  * 性能高，会缓存域名解析结果，当然缓存时间是受到域名的失效时间控制的。大约80%的域名解析到这里就结束了，LDNS承担了域名解析主要工作
+  * 通常会在用户所在城市的某个角落，不会很远
+  * Windows ipconfig，Linux cat /etc/resolv.conf 查询配置的DNS服务器
+
+* 根域名服务器Root Server
+  * 返回给LDNS所查询的主域名服务器（gTLD Server）地址。gTLD是国际顶级域名服务器
+
+* LDNS再向gTLD发送请求
+
+* gTLD服务器查找并返回此域名对应的Name Server域名服务器的地址
+  * Name Server通常就是用户注册的域名服务器，例如用户在某个域名服务提供商申请的域名，域名解析任务就由这个域名提供商的服务器完成
+
+* Name Server域名服务器查询存储的域名和IP的映射关系表，连同TTL值返回给DNS Server域名服务器
+
+* LDNS缓存这个域名和IP的对应关系，缓存时间由TTL值控制
+
+* 把解析的结果返回给用户，用户根据TTL值缓存在本地系统缓存中
+* 域名解析结束
+
+在实际的DNS解析过程中，可能还不止这10步，如Name Server可能有很多级，或者有一个GTM来负载均衡控制，这都有可能会影响域名解析过程
+
+
 
 
 
@@ -456,7 +502,63 @@ www.persona6.cn.	600	IN	A	120.76.132.188
 
 
 
-==先在本机的DNS查,再去根S查。发现属于`cn`域，**返回`com`域中的DNS的IP地址==**
+==先在本机的DNS查,再去根S查。发现属于`cn`域，**返回`com`域中的DNS的IP地址**==
+
+
+
+
+
+## CDN
+
+
+
+Content Delivery Network，即内容分发网络
+
+目的是通过在现有的Internet中增加一层新的CACHE(缓存)层，将网站的内容发布到最接近用户的网络”边缘“的节点，使用户可以==就近获取网站内容==，提高用户访问网站的响应速度
+
+
+
+解决服务器端的“第一公里”问题 　
+缓解甚至消除了不同运营商之间互联的瓶颈造成的影响 　
+减轻了各省的出口带宽压力 　
+缓解了骨干网的压力 　
+优化了网上热点内容的分布
+
+
+
+![](image.assets/20180423104123732.png)
+
+
+
+* 用户向localDNS发起请求查询输入域名对应的IP地址（若有缓存直接返回，否则去rootDNS查询）
+
+* localDNS迭代向rootDNS查询，逐级迭代,rootDNS=>顶级DNS=>权限DNS
+
+* 获得权限DNS后，localDNS向权限DNS发起域名解析请求
+
+* 权限DNS通常会将域名CNAME【没有的话默认为普通请求，直接返回解析到的IP】指向CDN网络中的智能DNS负载均衡系统
+
+* DNS负载均衡系统通过一些智能算法，将最合适的CDN节点IP地址返回给localDNS
+
+* localDNS将获得的IP地址返回给用户
+
+* 用户得到节点的IP地址后，向该节点发起访问请求
+
+* CDN节点返回请求文件，如果该节点中请求的文件不存在，就会再回到源站获取这个文件，然后返回给用户
+
+
+
+
+
+## A记录
+
+
+
+用来指定主机名/域名 对应的IP地址记录。用户可以将该域名下的网站服务器指向到自己的web server上。同时也可以设置二级域名
+
+
+
+
 
 
 
@@ -464,13 +566,19 @@ www.persona6.cn.	600	IN	A	120.76.132.188
 
 
 
+别名记录。这种记录允许您将多个名字映射到同一台计算机。 通常用于同时提供WWW和MAIL服务的计算机。例如，有一台计算机名为“host.mydomain.com”（A记录）。 它同时提供WWW和MAIL服务，为了便于用户访问服务。可以为该计算机设置两个别名（CNAME）：WWW和MAIL
+
+
+
 A 记录和 CNAME 记录有什么区别
 
-简单的说，A 记录直接指向 IP 地址，CNAME 记录指向域名。IP 地址是互联网世界中唯一的，而 CNAME 指向的域名也要指向 A 记录，也就说 IP 地址可以按需更换，而无需变更 CNAME 的记录值。
+简单的说，A 记录直接指向 IP 地址，CNAME 记录指向域名。IP 地址是互联网世界中唯一的，而 CNAME 指向的域名也要指向 A 记录，也就说 **IP 地址可以按需更换，无需变更CNAME的记录值**
 
 2.域名解析选 A 记录还是 CNAME 记录
 
-很多初学者都会直接添加 A 记录，如果是学习用、研究用也无所谓了；如果是长期建站、项目运营的话，一般都建议使用 CNAME 记录。CNAME 记录可用于 CDN 加速，通过 CDN 加速别名解析网站域名，这样既可以起到加速网站的作用，又能隐藏网站的真实 IP，减少被攻击的几率。现在的云S一般都接入了 BGP 多线路，至少是电信、联通、移动三线路，在更换 IP 的时候 CNAME 记录变，特别方便。
+长期建站、项目运营的话，一般使用 CNAME 记录,可用于 CDN 加速，既可以起到加速网站的作用，又能**隐藏真实IP**，减少被攻击的几率
+
+现在的云一般都接入了 BGP 多线路，至少是电信、联通、移动三线路，在更换 IP 的时候 CNAME 记录变，特别方便
 
 
 
