--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -205,17 +205,19 @@ class House{
 
 ## 适配器模式 adapter
 
-当原有接口与客户端不匹配,==无需修改原接口.通过关联方式将对象放入适配器中==,通过访问适配器的方法来间接操作对象,从而可以添加新的方法
+
+
+原有接口与客户端不匹配,==无需修改原接口.通过关联方式将对象放入适配器中==,通过访问适配器的方法来间接操作对象,从而可以添加新的方法
 
 另一种方法	继承,通过子类来访问父类原有的功能
 
-![image-20200817085632182](image.assets/适配器模式.png)
+![](image.assets/适配器模式.png)
 
 
 
 新闻联播为失聪人士提供了手语,让有障碍的人也能正常观看
 
-```
+```java
 public class AdapterPattern {
     public static void main(String[] args) {
     //通过Adapter适配器来操作Speaker对象
@@ -228,9 +230,7 @@ class Speaker {
         return "搬砖";   }}
 
 //原接口
-interface Translator {
-    String translate();
-}
+interface Translator {  String translate();}
 
 class Adapter implements Translator {
     private Speaker speaker;
@@ -258,6 +258,8 @@ class Adapter implements Translator {
 
 ## 桥接 Bridge
 
+
+
 将**抽象与实现分离**，使它们可以独立变化。**用组合代替继承实现**，降低了抽象和实现这两个可变维度的耦合度。
 
 
@@ -278,6 +280,8 @@ class Adapter implements Translator {
 
 ## 装饰器 Decorator
 
+
+
 动态的给对象增加职责
 
 运用了关联关系,把对象嵌入到装饰器中,由装饰器内部操作对象
@@ -288,7 +292,7 @@ class Adapter implements Translator {
 
 
 
-```
+```java
 public class DecoratorPattern {
 
     public static void main(String[] args) {
@@ -296,9 +300,7 @@ public class DecoratorPattern {
         new RobotDecorator(new FirstRobot()).doMorething(); }}
 
 //构件接口
-interface Robot {
-    void doSomething();
-}
+interface Robot { void doSomething();}
 
 //被装饰的构件
 class FirstRobot implements Robot {
@@ -523,11 +525,15 @@ class BikeFlyWeightFactory {
 
 ## 代理Proxy
 
-为某对象提供一种代理以控制对该对象的访问。即客户端通过代理间接地访问该对象，从而限制、增强或修改该对象的一些特性。
 
-![image-20200907094120213](image.assets/代理模式.png)
 
- ==访问控制理念==
+为对象提供代理以控制对该对象的访问
+
+客户端通过代理间接访问对象，从而限制、增强或修改该对象的一些特性。
+
+![](image.assets/代理模式.png)
+
+==访问控制理念==
 
 代理模式对客户端的访问限制思想同样运用在状态模式,策略模式等,根据状态或要执行的算法来限制去调用哪个方法.一个业务往往需要结合多种设计模式来完成
 
@@ -613,7 +619,7 @@ class RealSubjectProxy implements Subject {
 
 
 
-## 命令	Command：
+## 命令	Command
 
 将==请求封装为对象==，从而可用不同的请求对客户进行参数化,将==请求排队或记录请求日志==,支持**可撤销**的操作.使**发出请求的责任和执行请求的责任分离**
 
@@ -621,7 +627,7 @@ class RealSubjectProxy implements Subject {
 
 
 
-```
+```java
 public class CommandPattern {
     public static void main(String[] args) {
         SaveButton saveButton = new SaveButton();
@@ -733,6 +739,8 @@ class PrintCommand implements Command {
 
 ## 备忘录	Memento
 
+
+
 不破坏封装性的前提下，获取并保存一个对象的内部状态，以便以后恢复它
 
 备忘录类作为被备份类的私有内部类存在,二者内部属性一致,被备份类为private
@@ -743,11 +751,62 @@ class PrintCommand implements Command {
 
 
 
+```java
+public class MementoPattern {
+    public static void main(String[] args) {
+        History history = new History();
+        Document document = new Document();
+
+        //每次被修改时进行快照,同时快照对象入栈
+        document.change("1");
+        history.add(document.save());
+        //恢复快照
+        document.resume(history.getLastVersion());  }}
+
+interface Memento {}
+
+class History {
+    //栈存储备忘录对象
+    Stack<Backup> stack = new Stack<>();
+
+    public void add(Backup backup) {
+        stack.add(backup);
+    }
+
+    public Backup getLastVersion() {
+        return stack.pop();  }}
+
+class Document {
+    //需要备份的内容
+    private String content;
+
+    public Backup save() {
+        return new Backup(content);
+    }
+
+    public void resume(Backup backup) {
+        content = backup.content;
+    }
+
+    public void change(String content) {
+        this.content = content;   }}
+
+class Backup implements Memento {
+    String content;
+
+    public Backup(String content) {
+        this.content = content; }}
+```
+
+
+
 
 
 ## 解释器	Interpreter
 
-提供如何定义语言的文法，以及对语言句子的解释方法，即解释器。
+
+
+提供如何定义语言的文法，以及对语言句子的解释方法，即解释器
 
 
 
@@ -759,7 +818,9 @@ class PrintCommand implements Command {
 
 ## 模板方法	TemplateMethod
 
-定义一个操作中的算法骨架，而**将算法的一些步骤延迟到子类**中，使得子类可以不改变该算法结构的情况下重定义该算法的某些特定步骤。==行为由父类控制,实现由子类完成==
+
+
+定义算法骨架，**将算法的一些步骤延迟到子类**中，使得子类可以不改变该算法结构的情况下重定义该算法的某些特定步骤。==行为由父类控制,实现由子类完成==
 
 ![image-20200907094120213](image.assets/模板方法.png)
 
@@ -769,7 +830,7 @@ class PrintCommand implements Command {
 
 类似于菜谱,规定了菜谱的模板,厨师只需按照步骤进行炒菜
 
-```
+```java
 public class TemplateMethodPattern {
     public static void main(String[] args) {
         new CookingFood().cook(); }}
@@ -788,6 +849,7 @@ class CookingFood extends Cooking {
     @Override
     protected void step1() {
         System.out.println("臭豆腐,腐乳"); }
+  
     @Override
     protected void step2() {
         System.out.println("面包片,老干妈"); }}
@@ -799,7 +861,11 @@ class CookingFood extends Cooking {
 
 ## 观察者(发布/订阅) Observer
 
-观察者与被观察者存在多对一关系,1个被观察者发生状态改变,将通知1~n个观察者 ，而Observer收到通知后，将查询Subject的状态
+
+
+观察者与被观察者存在多对一关系,1个被观察者发生状态改变,将通知1~n个观察者
+
+而Observer收到通知后，将查询Subject的状态
 
 
 
@@ -808,7 +874,7 @@ class CookingFood extends Cooking {
   * 当对一个对象的改变需要同时改变其他对象，而不知道具体有多少对象有待改变时
   * 当一个对象必须通知其他对象，但不能假定其他对象是谁，即不希望这些对象是紧耦合的
 
-```
+```java
 public class ObserverPattern {
     public static void main(String[] args) {
         Debit zhangSan = new ZhangSan();
@@ -882,7 +948,7 @@ B中：
 
 ==回调函数只有1个观察者,1个被观察者,当A把回调函数set进B时,将调用B的执行回调函数方法,通知B可以开始执行==
 
-```
+```java
 //回调函数接口
 interface Callback {
     void callbackByTel(String answer);}
@@ -919,7 +985,11 @@ class B {
 
 ## 中介者	Mediator
 
-定义中介对象**简化原有对象之间的交互**，使原有对象**不需要显式地互相调用**,使各个对象间的耦合松散，==只需关心和Mediator的关系，使多对多的关系变成了一对多的关系==，可以降低系统的复杂性，提髙可修改扩展性
+
+
+定义中介对象**简化原有对象之间的交互**，使原有对象**不需要显式地互相调用**
+
+各个对象间的耦合松散，==只需关心和Mediator的关系，使多对多的关系变成了一对多的关系==，降低系统的复杂性，提髙可修改扩展性
 
 
 
@@ -943,19 +1013,7 @@ class B {
 
 
 
-### 状态VS责任链
-
-都能消除if分支过多的问题,当状态=责任时，两种模式可以互相转化
-
-从定义来看，**状态模式强调对象内在状态的改变**，而**责任链模式强调外部对象间的改变**
-
-从代码来看，状态模式需要知道下一个要转化的状态对象；而责任链模式并不清楚其下一个节点处理对象，因为链式组装由客户端负责。
-
-
-
-
-
-```
+```java
 public class StatePattern {
     public static void main(String[] args) {
         Context context = new Context();
@@ -990,11 +1048,27 @@ class Context {
 
 
 
+### 状态VS责任链
 
 
-## 责任链	Chain of Responsibility
 
-给多个对象处理请求的机会,==减少发送者和接收者之间的耦合==,把接收对象链接起来,在链中传递请求,直到请求被响应为止
+都能消除if分支过多的问题,当状态=责任时，两种模式可以互相转化
+
+从定义来看，**状态模式强调对象内在状态的改变**，而**责任链模式强调外部对象间的改变**
+
+从代码来看，状态模式需要知道下一个要转化的状态对象；而责任链模式并不清楚其下一个节点处理对象，因为链式组装由客户端负责
+
+
+
+
+
+## 责任链 Chain of Responsibility
+
+
+
+给多个对象处理请求的机会,==减少发送/接收者耦合==
+
+把接收对象链接起来,在链中传递请求,直到请求被响应为止
 
 ![image-20200907094120213](image.assets/责任链模式.png)
 
@@ -1049,7 +1123,7 @@ class Boss extends Handler {
 
 
 
-## 策略	Strategy
+## 策略 Strategy
 
 定义一系列**封装算法**，使它们可以相互替换，算法的改变不影响使用算法的客户
 
@@ -1088,7 +1162,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
-### 策略模式和状态模式
+### 策略VS状态
 
 * 相同
   * 策略模式关注多种算法的内容
