--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -1273,7 +1273,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 设计目的单一的类
 
 高内聚	一个代码只完成一项功能
-模块化	模块可以轻易的拿到其他系统中使用
+模块化	模块可以轻易地拿到其他系统中使用
 
 
 
@@ -1292,7 +1292,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 **依赖抽象,而不是具体实现,面向接口编程,不根据实现编程**
 
-声明方法的参数类型、方法的返回类型、变量的引用类型时，尽可能使用抽象类型，因为抽象类型可以被它的任何一个子类型所替代
+声明类型时，尽可能使用抽象类型，可以被子类型替代
 
 
 
@@ -1336,7 +1336,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
-一个对象对其他对象尽可能更少的了解,不要和陌生人打交道，如果真的需要，找一个自己的朋友，让他替你和陌生人打交道
+对象之间尽可能少的了解,不要和陌生人打交道，如果真的需要，找一个自己的朋友，让他替你和陌生人打交道
 
 “低耦合”，门面模式和调停者模式就是对迪米特法则的践行
 
@@ -1597,10 +1597,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 ==面向对象分析没有考虑到系统测试问题==
 
-* 高层模块不应该依赖于底层模块。
-* 传统的结构化设计中，髙层模块需要调用或使用底层模块，导致高层模块必须依赖于底层模块，但借助面向对象中的抽象类、接口等一系列机制，可以使得高层模块仅仅和接口耦合，而和实际的底层模块没有直接关联。
-
- 
+* 
 
 * include	包含
 
@@ -1620,27 +1617,32 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
-# 内聚与耦合
+# 内聚/耦合
+
+
 
 * 内聚
 
-  * 偶然内聚	各个处理元素之间没有任何联系。
+  * 偶然内聚	各个处理元素之间没有任何联系
   * 逻辑内聚	执行逻辑上相似的功能，**通过参数确定完成哪个功能**
   * 时间内聚	**同时执行的动作组合在一起**
-  * 通信内聚	所有处理元素在**同一个数据结构**上操作，或者指各处理使用**相同的输入/输出数据**
-  * 顺序内聚	各个处理元素必须顺序执行，==前一个功能元素的输出是下一个功能元素的输入==
+  * 通信内聚	所有处理元素在**同一个数据结构**上操作，或各处理使用**相同的输入/输出数据**
+  * 顺序内聚	==前一个功能元素的输出是下一个功能元素的输入==
   * 功能内聚	==最强的内聚==，所有元素**共同完成一个功能，缺一不可**
 
 * 耦合
 
   * 数据耦合:两个模块彼此间通过数据**参数**交换信息
-  * 标记耦合:通过**参数表**传递信息,这个记录是某一个**数据结构**的子记录,而不是简单变量
+  * 标记耦合:通过**参数表(某种数据结构**)传递信息
   * 控制耦合:两个模块彼此间传递的信息中有控制信息
-  * 内容耦合:一个模块需要设计到另一个模块的内部信息
+  * 内容耦合:涉及到另一个模块的内部信息
 
 
 
+* 高层模块不应该依赖于底层模块
+* 借助抽象、接口，可以使得高层模块仅仅和接口耦合，而和实际的底层模块没有直接关联
 
+ 
 
 
 
