--- a/算法+数据结构.md
+++ b/算法+数据结构.md
@@ -533,18 +533,41 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
+K的个数称为阶,用M表示
+
+
+
 ### B-树
 
 ![](image.assets/B树.jpg)
 
 * ==允许每个节点有更多子节点==
 * 按关键字递增排列，左小右大,关键字只出现在一个结点中
+* 根节点的子结点>=2
+* M/2（上取整）<=非叶节点的子结点数<=M ，且M>=2，空树除外（M阶代表查找路径，M=2是2叉）
+* M/2（上取整）-1<= 非根节点的key <=M-1
+* ==所有叶子节点均在同一层==,叶子节点除了关键字和关键字记录的指针外,也有指向其子节点(null)的指针
 
-* 2<=非叶节点的子节点数<=M ，且M>=2，空树除外（M阶代表查找路径，M=2是2叉）
+实际应用中阶数通常>100，即使存储大量的数据，B树的高度仍然比较小
 
-* 关键字数：枝节点的关键字数量>=ceil(m/2)-1个且<=M-1个（ceil()是朝正无穷方向取整的函数 ceil(1.1)=2)
 
-* 所有叶子节点均在同一层、叶子节点除了包含了关键字和关键字记录的指针外,也有指向其子节点的指针只不过其指针地址都为null,对应下图最后一层节点的空格子
+
+==用度定义B树==
+
+再阐述下：B树中每一个结点能包含的key个数有上界和下界。下界可以用一个称作B树的最小度数t（t>=2）表示
+
+1. 每个非根的内结点至少有t个子女，每个非根的结点必须至少含有t-1个关键字，如果树是非空的， 则根结点至少包含一个关键字
+2. 每个结点可包含至多2t-1个关键字。所以一个内结点至多可有2t个子女。如果一个结点恰好有2t-1 个关键字，我们就说这个结点是满的 
+
+
+
+==t度的B树就是 2t阶的B树 (t=2m)==
+
+因为t度的B树,节点最多有2t个孩子，2t-1个关键字；m阶的B树最多有m个孩子，m-1个关键字
+
+用度定义B树，分割会先提出了t−1处的结点
+
+
 
 
 
@@ -573,6 +596,8 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 #### B+树与索引
 
 
+
+磁盘由盘片构成,每个盘片有两面，又称为盘面 。盘片中央有一个可以旋转的主轴，他使得盘片以固定 的旋转速率 旋转，一个磁盘中包含了多个这样的盘片并封装在一个密 封的容器内 。盘片的每 个表面是由一组称为磁道同心圆组成的 ，每个磁道被划分为了一组扇区 ，每个 扇区包含相等数量的数据位，通常 是512个子节，扇区之间由一些间隙隔开,这些间隙中不存储数据 。
 
 ​	MySQL数据以文件的形式存储到硬盘。而读取数据靠机械臂运动,分为寻道时间、旋转延迟、传输时间三个部分,寻道和旋转花费时间长.
 
