--- a/算法+数据结构.md
+++ b/算法+数据结构.md
@@ -1028,7 +1028,17 @@ D.关键路径是AOE网中源点至汇点的最短路径
 
 
 
-## 分治法
+## 递推
+
+
+
+
+
+
+
+## 分治
+
+
 
 子问题相互独立且形式相同 ,可以通过递归解决
 
@@ -1047,6 +1057,22 @@ D.关键路径是AOE网中源点至汇点的最短路径
 
 
 N皇后 ,迷宫 ,背包
+
+
+
+## 迭代
+
+
+
+也称辗转法
+
+不断用变量的旧值递推新值，在解决问题时总是重复利用一种方法
+
+迭代法又分为精确迭代和近似迭代。“二分法”和“牛顿迭代法”属于近似迭代法，功能都比较类似
+
+
+
+
 
 
 
