--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -65,7 +65,7 @@ public interface Collection<E> extends Iterable<E> {
 
 工厂方法 ：用来生产同一等级结构中的固定产品。（支持拓展增加产品）
 
-现在不光有伦敦工厂，还增设了纽约工厂（仍然是同一等级结构，但是支持了产品的拓展），这两个工厂依然只生产三种类型的pizza：chesse,pepper,greak（固定产品）。
+现在不光有伦敦工厂，还增设了纽约工厂（仍然是同一等级结构，但是支持了产品的拓展），这两个工厂依然只生产三种类型的pizza：chesse,pepper,greak（固定产品）
 
 
 
@@ -73,7 +73,7 @@ public interface Collection<E> extends Iterable<E> {
 
 提供一个创建产品族的接口，用来生产不同产品族的全部产品。（**支持增加产品/产品族**）  
 
-不光增设了纽约工厂（仍然是同一等级结构，但是支持了产品的拓展），这两个工厂还增加了一种新的类型的pizza：chinese pizza（增加产品族）。
+不光增设了纽约工厂（仍然是同一等级结构，但是支持了产品的拓展），这两个工厂还增加了一种新的类型的pizza：chinese pizza（增加产品族）
 
 
 
@@ -314,9 +314,7 @@ class FirstRobot implements Robot {
 class RobotDecorator implements Robot {
 
     private Robot robot;
-
-    public RobotDecorator(Robot robot) {
-        this.robot = robot;}
+    public RobotDecorator(Robot robot) { this.robot = robot;}
 
     @Override
     public void doSomething() { robot.doSomething();}
@@ -342,25 +340,20 @@ IO流大量运用装饰器模式,直接继承了InputStream的子类有
 
 FilterInputStream与其它子类不同
 
-```
+```java
 public class FilterInputStream extends InputStream {
 
 	//内部维护一个InputStream,调用InputStream的方法
     protected volatile InputStream in;
 
-    protected FilterInputStream(InputStream in) {
-        this.in = in;}
-    public int read() throws IOException {
-        return in.read(); }
-    public int read(byte b[]) throws IOException {
-        return read(b, 0, b.length); }
-    public int read(byte b[], int off, int len) throws IOException {
-        return in.read(b, off, len); }
-    public void close() throws IOException {
-        in.close();  }
+    protected FilterInputStream(InputStream in) { this.in = in;}
+    public int read() throws IOException { return in.read(); }
+    public int read(byte b[]) throws IOException { return read(b, 0, b.length); }
+    public int read(byte b[], int off, int len) throws IOException {  return in.read(b, off, len); }
+    public void close() throws IOException {  in.close();  }
 ```
 
-FilterInputStream它什么事都不做 **,委托给内部的InputStream成员对象**
+FilterInputStream什么事都不做 **,委托给内部的InputStream成员对象**
 
 
 
@@ -375,26 +368,28 @@ FilterInputStream的又有其子类，分别是：
 
 其中BufferedInputStream
 
-    public synchronized int read() throws IOException {
-    //当pos>=count时，需要缓冲数据，调用fill()将缓冲区加满
-        if (pos >= count) {
-            fill();
-            if (pos >= count)
-                return -1;
-        }
-        return getBufIfOpen()[pos++] & 0xff;}
+```java
+public synchronized int read() throws IOException {
+//当pos>=count时，需要缓冲数据，调用fill()将缓冲区加满
+    if (pos >= count) {
+        fill();
+        if (pos >= count)
+            return -1;
+    }
+    return getBufIfOpen()[pos++] & 0xff;}
+```
 
 BufferedInputStream就是一个装饰器，==为InputStream加上缓冲功能==,使得FileInputStream带有了缓冲功能
 
-```
+```java
 new BufferedInputStream(new FileInputStream(new File("")));
 ```
 
 
 
+IO如果单纯使用继承，无疑需要很多的类。比如说，操作文件需要一个类，字节读取需要一个类，字符读取又需要一个类....会导致大量的 IO 继承类的出现。对编程不利
 
-
-java IO 中需要完成对不同输入输出源的操作，如果单纯的使用继承这一方式，无疑需要很多的类。比如说，我们操作文件需要一个类，实现文件的字节读取需要一个类，实现文件的字符读取又需要一个类....一次类推每个特定的操作都需要一个特定的类。这无疑 会导致大量的 IO 继承类的出现。显然对于编程是很不利的。而装饰模式可以很好地解决这一问题，在装饰模式中：节点流（如 FileInputStream）直接与输入源交互， 之后通过过滤流（FilterInputStream）进行装饰，这样获得的 io 对象便具有某几个的功能，拓展了 IO 的功能。
+而装饰模式可以很好地解决这一问题，在装饰模式中：节点流（如 FileInputStream）直接与输入源交互，之后通过过滤流（FilterInputStream）进行装饰，这样获得的 io 对象便具有某几个的功能，拓展了 IO 的功能
 
 
 
@@ -404,16 +399,18 @@ java IO 中需要完成对不同输入输出源的操作，如果单纯的使用
 
 ## 外观	Facade
 
+
+
 为==内部复杂的系统==提供一个**一致的接口**，使这些子系统更加容易被访问
 
-![image-20200817085632182](image.assets/外观模式.png)
+![](image.assets/外观模式.png)
 
 * 优点	内外部的通信通过**统一的通信对象**进行,通信对象是高层次的,将内部复杂的操作进行封装,使得外观上简洁,内部复杂
 * 缺点    **不符合开闭原则**	当内部发生改变时,外观也需要修改
 
 
 
-```
+```java
 public class FacadePattern {
     public static void main(String[] args) {
     //客户端调用外观的方法
@@ -438,6 +435,8 @@ class SubFlow2{ void method2(){}}
 
 ## 享元 Flyweight
 
+
+
 运用共享,支持大量细粒度对象复用
 
 ![image-20200907094120213](image.assets/享元模式.jpg)
@@ -461,7 +460,7 @@ class SubFlow2{ void method2(){}}
 
 池技术	线程池,连接池,都是享元
 
-```
+```java
 public class FlyWeightPattern {
     public static void main(String[] args) {
         BikeFlyWeight bike = BikeFlyWeightFactory.getInstance().getBike();
@@ -543,7 +542,7 @@ class BikeFlyWeightFactory {
 
 
 
-```
+```java
 public class ProxyPattern {
     public static void main(String[] args){
         new RealSubjectProxy().doWork();  }}
@@ -583,8 +582,8 @@ class RealSubjectProxy implements Subject {
 
 静态代理缺点：
 
-- 代理类和目标对象的类都是在编译期间确定下来，不利于程序的扩展。
-- 每一个代理类只能为一个接口服务，这样一来程序开发中必然产生过多的代理。
+- 代理类和目标对象的类都是在编译期间确定下来，不利于程序的扩展
+- 每一个代理类只能为一个接口服务，这样一来程序开发中必然产生过多的代理
 
 
 
@@ -619,7 +618,9 @@ class RealSubjectProxy implements Subject {
 
 
 
-## 命令	Command
+## 命令 Command
+
+
 
 将==请求封装为对象==，从而可用不同的请求对客户进行参数化,将==请求排队或记录请求日志==,支持**可撤销**的操作.使**发出请求的责任和执行请求的责任分离**
 
@@ -633,7 +634,7 @@ public class CommandPattern {
         SaveButton saveButton = new SaveButton();
         Textbox textbox = new Textbox();
 
-        //将页面对象与命令绑定,命令的构造方法中传入了页面元素textbox
+        //将页面对象与命令绑定,命令的构造方法中传入页面元素textbox
         saveButton.bindCommand(new PrintCommand(textbox));
 
         textbox.setContext("aa");
@@ -654,14 +655,10 @@ class SaveButton {
     /**
      *  传入命令对象,完成按钮与命令的绑定,实现了UI和逻辑的分离
      */
-    public void bindCommand(Command command) {
-        this.command = command;
-    }
+    public void bindCommand(Command command) { this.command = command;}
 
     public void doPrint() {
-        if (null != command) {
-            command.execute();
-        }
+        if (null != command) { command.execute();  }
     }
 }
 
@@ -670,14 +667,8 @@ class SaveButton {
  */
 class Textbox {
     private String context;
-
-    public String getContext() {
-        return context;
-    }
-
-    public void setContext(String context) {
-        this.context = context;
-    }
+    public String getContext() { return context;}
+    public void setContext(String context) { this.context = context;}
 }
 
 
@@ -685,9 +676,7 @@ class Textbox {
  * 逻辑层  打印服务
  */
 class PrintService {
-    public void print(String text) {
-        System.out.print(text);
-    }
+    public void print(String text) {  System.out.print(text); }
 }
 
 /**
@@ -701,16 +690,13 @@ interface Command {
  * 具体命令
  */
 class PrintCommand implements Command {
-
     private final PrintService printService = new PrintService();
     private Textbox textbox;
 
-    public PrintCommand(Textbox textbox) {
-        this.textbox = textbox;  }
+    public PrintCommand(Textbox textbox) {  this.textbox = textbox;  }
 
     @Override
-    public void execute() {
-        printService.print(textbox.getContext());    }}
+    public void execute() {  printService.print(textbox.getContext());    }}
 ```
 
 
@@ -721,6 +707,8 @@ class PrintCommand implements Command {
 
 ## 迭代器	Iterator
 
+
+
 提供一种方法来顺序访问聚合对象中的一系列数据，而不暴露聚合对象的内部表示
 
 
@@ -730,6 +718,8 @@ class PrintCommand implements Command {
 
 
 ## 访问者	Visitor
+
+
 
 在不改变集合元素的前提下，为一个集合中的每个元素**提供多种访问方式**，从而在不改变个元素的类的前提下作用于这些元素的新操作
 
@@ -769,33 +759,24 @@ class History {
     //栈存储备忘录对象
     Stack<Backup> stack = new Stack<>();
 
-    public void add(Backup backup) {
-        stack.add(backup);
-    }
+    public void add(Backup backup) {   stack.add(backup);}
 
-    public Backup getLastVersion() {
-        return stack.pop();  }}
+    public Backup getLastVersion() { return stack.pop();  }
+}
 
 class Document {
     //需要备份的内容
     private String content;
 
-    public Backup save() {
-        return new Backup(content);
-    }
+    public Backup save() { return new Backup(content);}
 
-    public void resume(Backup backup) {
-        content = backup.content;
-    }
-
-    public void change(String content) {
-        this.content = content;   }}
+    public void change(String content) { this.content = content;   }
+}
 
 class Backup implements Memento {
     String content;
 
-    public Backup(String content) {
-        this.content = content; }}
+    public Backup(String content) { this.content = content; }}
 ```
 
 
@@ -832,8 +813,7 @@ class Backup implements Memento {
 
 ```java
 public class TemplateMethodPattern {
-    public static void main(String[] args) {
-        new CookingFood().cook(); }}
+    public static void main(String[] args) {  new CookingFood().cook(); }}
 
 //给出了cook()的模板,但具体的步骤step1,step2由子类来实现
 abstract class Cooking {
@@ -847,12 +827,10 @@ abstract class Cooking {
 //子类继承模板,实现模板中的抽象方法
 class CookingFood extends Cooking {
     @Override
-    protected void step1() {
-        System.out.println("臭豆腐,腐乳"); }
+    protected void step1() {   System.out.println("臭豆腐,腐乳"); }
   
     @Override
-    protected void step2() {
-        System.out.println("面包片,老干妈"); }}
+    protected void step2() {   System.out.println("面包片,老干妈"); }}
 ```
 
 
@@ -902,22 +880,17 @@ class ZhangSan implements Debit {
 
     //将需要通知的对象放入列表
     @Override
-    public void borrow(Credit credit) {
-        list.add(credit);
-    }
+    public void borrow(Credit credit) {  list.add(credit);}
 
     //状态改变触发通知
     @Override
-    public void notifyCredits() {
-        list.forEach(Credit::takeMoney);
-    }
+    public void notifyCredits() {  list.forEach(Credit::takeMoney);}
 }
 
 //贷款人
 class WangWu implements Credit {
     @Override
-    public void takeMoney() {
-        System.out.println("王五拿钱"); }
+    public void takeMoney() { System.out.println("王五拿钱"); }
 }
 ```
 
@@ -966,12 +939,10 @@ class B {
     private Callback callback;
 
     //对外提供传入回调函数的set方法
-    public void setCallBack(Callback callback) {
-        this.callback = callback;  }
+    public void setCallBack(Callback callback) {  this.callback = callback;  }
 
     //执行回调函数的方法
-    public void handleQustion() {
-        callback.callbackByTel("搬砖");  }
+    public void handleQustion() {  callback.callbackByTel("搬砖");  }
 }
 ```
 
@@ -996,6 +967,8 @@ class B {
 
 
 ## 状态	State
+
+
 
 枚举所有状态,将对象的转换规则和业务进行封装,允许一个对象在其**内部状态改变时改变其行为**
 
@@ -1027,23 +1000,22 @@ abstract class State {
 
 class Happy extends State {
     @Override
-    void doWork() {
-        System.out.println("开心搬砖");  }}
+    void doWork() {  System.out.println("开心搬砖");  }
+}
 
 class Sad extends State {
     @Override
-    void doWork() {
-        System.out.println("伤心摸鱼"); }}
+    void doWork() {  System.out.println("伤心摸鱼"); }
+}
 
 //环境类内部维护状态,对外提供改变状态的方法
 class Context {
     private State state;
 
-    public void changeState(State state) {
-        this.state = state;}
+    public void changeState(State state) {   this.state = state;}
 
-    public void doSomeThing() {
-        state.doWork();}}
+    public void doSomeThing() { state.doWork();}
+}
 ```
 
 
@@ -1102,21 +1074,21 @@ abstract class Handler {
     //责任流转接口,寻找能处理业务的负责人
     public abstract void process(Integer info);
 
-    public void setNextHandler(Handler nextHandler) {
-        this.nextHandler = nextHandler;  }
+    public void setNextHandler(Handler nextHandler) { this.nextHandler = nextHandler;  }
 }
 
 class Leader extends Handler {
     @Override
     public void process(Integer info) {
         //参数大于10时,Leader权限不足,将责任流转给Boss
-        if (info > 10) {
-            nextHandler.process(info);   }   }}
+        if (info > 10) {   nextHandler.process(info);  }}
+}
 
 class Boss extends Handler {
     @Override
     public void process(Integer info) {
-        System.out.println("Boss处理");  }}
+        System.out.println("Boss处理");  }
+}
 ```
 
 
@@ -1163,6 +1135,8 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 ### 策略VS状态
+
+
 
 * 相同
   * 策略模式关注多种算法的内容
@@ -1249,6 +1223,24 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 再复杂的系统都可以为用户提供一个简单的门面，Java Web 开发中作为前端控制器的 Servlet 或 Filter 不就是一个门面吗，浏览器对服务器的运作方式一无所知，但是通过前端控制器就能够根据你的请求得到相应的服务。调停者模式也可以举一个简单的例子来说明，例如一台计算机，CPU、内存、硬盘、显卡、声卡各种设备需要相互配合才能很好的工作，但是如果这些东西都直接连接到一起，计算机的布线将异常复杂，在这种情况下，主板作为一个调停者的身份出现，它将各个设备连接在一起而不需要每个设备之间直接交换数据，这样就减小了系统的耦合度和复杂度
 
 
+
+### 中介 VS 门面
+
+
+
+中介让两个类不直接发生关系，而是通过中介者联系，**中介者不偏向于任一方,双方的关系是双向的**
+
+门面模式也是让两个类不直接发生关系，**门面偏向于某一方，某一方不一定甚至不会通过门面和另一方发生关系，偏向于单向关系**
+
+
+
+门面模式是结构型模式，中介者模式是行为型模式。
+
+门面模式所有的请求处理都委托给子系统完成，而中介者模式则由中心协调同事类和中心本身共同完成业务
+
+
+
+**中介者模式应用在当事双方不方便或无能力直接联系的场合**
 
 
 
