--- a/软件设计师/计算机网络.md
+++ b/软件设计师/计算机网络.md
@@ -6,7 +6,19 @@
 
 ![](image.assets/image-20200818075601488.png)
 
+
+
+![](image.assets/4层模型.jpg)
+
+
+
 ## 应用层
+
+
+
+**这三层是socket编程，客户端与主机间通信**网络编程的重点！！！
+
+
 
 * 基于TCP
   * POP3	110	离线接收邮件
@@ -25,11 +37,19 @@
 
 NFS		网络文件系统
 
+
+
 ## 表示层
+
+
 
 定义数据格式及加密
 
+
+
 ## 会话层
+
+
 
 定义了如何开始、控制和结束一个会话
 
@@ -37,15 +57,27 @@ NFS		网络文件系统
 
 ## 传输层
 
+
+
+**按照规定协议来收发数据**
+
+
+
 TCP
 
 UDP
 
+
+
 ## 网络层	包
 
-对端到端的包传输进行定义，它定义了能够标识所有结点的逻辑地址，还定义了路由实现的方式和学习的方式。
 
-为了适应最大传输单元长度小于包长度的传输介质，网络层还**定义了包的分段方法**,如IP，IPX等。
+
+端到端(**寻找路由与确认主机**)
+
+定义了能够标识所有结点的逻辑地址，还定义了路由实现的方式
+
+为适应最大传输单元长度小于包长度的传输介质，**定义了包的分段方法**,如IP，IPX等
 
 * 三层交换机   有**路由功能的交换机**
 
@@ -65,6 +97,10 @@ UDP
 
 ## 数据链路层	帧
 
+
+
+**保证数据的正确传输（校验）**
+
 定义了在单个链路上如何传输数据
 
 
@@ -81,7 +117,15 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 
 ## 物理层	bit
 
+
+
+数据转换（数字信号->电信号）
+
 用多个规范完成对所有细节的定义，如连接头、帧、帧的使用、电流、编码及光调制等
+
+
+
+==arp，rarp==
 
 
 
@@ -135,11 +179,11 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 
  
 
-* 面向连接	发送数据之前,**先握手**
+* 面向连接	发送数据前,**先握手**
 
-* 全双工服务	双向传输数据
+* 全双工服务
 
-* 点对点	**单个**发送/接收方之间连接
+* 点对点	**单个**发送/接收方
 
 * 差错检测
 
@@ -149,15 +193,25 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 
 * 定时器
 
-* 用于序号和确认号的首部字段
-  * 序列号seq：4字节，标记顺序，第一个字节编号由本地随机产生；给字节编上序号后，就给每个报文段指派一个序号
-  * 确认号ack：4字节，期待收到对方下一个报文段的第一个数据字节的序号
-  * 确认ACK：占1位，**仅当ACK=1时，确认字段才有效**
-  * 同步SYN：连接建立时用于同步序号。SYN=1，ACK=0：连接请求报文段。若同意连接，则在响应报文段中使得SYN=1，ACK=1。==SYN=1表示连接请求/接受==。**SYN只有在握手才置1，握手完成置0**
-  * 终止FIN：FIN=1表示发送方的数据发送完毕，要求释放连接
-  * ==大写表示标志位, 其值为1/0	ack、seq小写的单词表示序号==
+  * 序列号seq：4字节，标记顺序，第一个字节编号由本地随机产生
 
- 
+  * 确认号ack：4字节，期待收到对方下一个报文段的第一个数据字节的序号
+
+  * 确认ACK：占1位，**仅当ACK=1时，确认字段才有效**
+
+  * 同步SYN：连接建立时用于同步序号,**只在握手时才置1，握手完成置0**
+
+    * SYN=1，ACK=0：连接请求报文段
+    * SYN=1，ACK=1:同意连接
+
+  * 终止FIN：FIN=1表示发送方的数据发送完毕，要求释放连接
+
+    ==大写表示标志位, 其值为1/0	ack、seq小写的单词表示序号==
+
+
+
+
+
 
 ## 连接数量限制
 
@@ -184,32 +238,27 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 重点是**协商初始序列号**,做好发数据的准备工作
 
 * 3->2，**可能死锁**
-  * 假定C给S发连接请求分组，S收到了这个分组，并发送了确认应答分组
-  * 按照两次握手的协定，S认为连接成功建立，开始发送数据分组。
-  * 应答分组丢失，C不知道S是否已准备好,是否收到连接请求分组,序列号是多少
-  * C认为连接未建立，忽略S发来的数据，**只等待连接确认应答分组**
+  * C->S连接请求，S收到并确认应答,按照两次握手的协定，S认为连接成功建立，开始发送数据分组
+  * 应答分组丢失，C不知道S是否已准备好,是否收到连接请求分组,序列号是多少,C认为连接未建立，忽略S发来的数据，**只等待连接确认应答分组**
   * 而S发出的分组超时后，**重复发送同样的分组**。形成死锁
 
-
+==当S收到C的SYN连接请求报文后，可以直接发送SYN+ACK,所以只有3次==
 
  ![](image.assets\三次握手.png)
 
 * 第1次握手：建立连接
-  * C发送（syn=x）
+  * C->（SYN=1,seq=x） 连接请求
   * 进入"同步已发送"SYN_SENT状态，等待S确认
 
-* 第2次握手：S收到syn包
-  * 确认客户的syn连接请求，返回（ack=x+1,syn=y）
+* 第2次握手：S收到SYN包
+  * S->（ACK=1,ack=x+1,SYN=1,seq=y） 同意连接,同步序列号
   * S进入"同步收到"SYN_RECV状态
 
 * 第3次握手：C收到S的SYN+ACK包
-  * 向S发送(ack=y+1）确认包ACK
+  * C->(ACK=1,ack=y+1,seq=x+1）  确认包
   * C和S都进入"已建立连接"ESTABLISHED"状态
-  * 完成三次握手
 
 
-
-==当S收到C的SYN连接请求报文后，可以直接发送SYN+ACK,所以只有3次==
 
 ==前两次握手不包含应用层数据==,第三次可以包含
 
@@ -217,38 +266,37 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 
 ## 四次挥手
 
+
+
 ![](image.assets\四次挥手.png)
 
 * 第1次挥手
-  * C发出连接释放报文，并且停止发送数据。释放数据报文首部，FIN=1，其序列号为seq=u（等于前面已经传送过来的数据的最后一个字节的序号加1）
+  * C->FIN=1，seq=u（之前数据的最后序号+1）  连接释放报文，并停止发送数据,释放数据报文首部
+    * FIN报文段即使不携带数据，也要消耗一个序号
   * C进入FIN-WAIT-1（终止等待1）状态
-  * FIN报文段即使不携带数据，也要消耗一个序号
 
 * 第2次挥手
-  * S收到连接释放报文，发出确认报文，ACK=1，ack=u+1，并带上自己的序列号seq=v
-  * 服务端进入了CLOSE-WAIT（关闭等待）状态
-  * S通知高层的应用进程，释放C->S的方向的连接，这时处于半关闭状态，即C没有数据要发送，但是S若发送数据，C依然要接受。这个状态还要持续一段时间，也就是整个CLOSE-WAIT状态持续的时间
-  * C收到S的确认请求
-  * C就进入FIN-WAIT-2（终止等待2）状态，等待S发送连接释放报文
+  * S->ACK=1，ack=u+1，seq=v   收到连接释放报文，发出确认报文
+  * S通知高层的应用进程，释放C->S方向的连接，这时处于半关闭状态，即C没有数据要发送，但是S若发送数据，C依然要接受
+  * S进入CLOSE-WAIT（关闭等待）状态,这个状态要持续一段时间
+  * C收到S的连接释放报文
+  * C进入FIN-WAIT-2（终止等待2）状态，等待S的连接释放报文
 
 * 第3次挥手
-  * S将所有数据发送完毕，向C发送连接释放报文，FIN=1，ack=u+1，由于在半关闭状态，S很可能又发送了一些数据，假定此时的序列号为seq=w
-  * S就进入了LAST-ACK（最后确认）状态，等待C的确认
+  * S->FIN=1，ack=u+1,seq=w(半关闭状态下S很可能又发送了一些数据)    数据发送完毕，向C发送连接释放报文
+  * S进入了LAST-ACK（最后确认）状态，等待C的确认释放
 
 * 第4次挥手
-  * C收到S的连接释放报文后，必须发出确认，ACK=1，ack=w+1，而自己的序列号是seq=u+1
-  * 此时，C就进入了TIME-WAIT（时间等待）状态。==此时TCP连接还没有释放，必须经过2MSL（最长报文段寿命）的时间后，才进入CLOSED状态==
-    * 2MSL=单次发送和回复所需的最大时间
-    * **Client发出最后的ACK可能会丢失。Server如果没有收到ACK，将不断发送FIN片段**。所以Client不能立即关闭，它必须确认Server接收到了该ACK。
+  * C->ACK=1，ack=w+1，seq=u+1   收到S的连接释放报文后，必须回复确认释放报文
+  * C进入了TIME-WAIT（时间等待）状态。==此时TCP连接还没有释放，必须经过2MSL（最长报文段寿命）的时间后，才进入CLOSED状态==
+    * 2MSL:单次发送+回复所需的最大时间
+    * **Client发出最后的ACK可能会丢失。Server如果没有收到ACK，将不断发送FIN片段**。所以Client不能立即关闭，它必须确认Server接收到了该ACK
     * 同时设置==计时器==，2MSL内再次收到FIN，那么Client会重发ACK并再次等待2MSL
-  * S只要收到了C发出的确认，立即进入CLOSED状态
-  * **S结束TCP连接的时间比C早**
+  * S收到了C发出的确认释放，立即进入CLOSED状态,==S结束TCP连接的时间比C早==
+  
+    ****
 
-
-
-当Server收到FIN报文，**不会立即关闭SOCKET**，只先回复一个ACK报文，等所有的报文都发送完了，才发送FIN报文
-
-==由于FIN和ACK不能一起发送,需要四次==
+当Server收到FIN报文，**不会立即关闭SOCKET**，只先回复一个ACK报文，等所有的报文都发送完了，才发送FIN报文,==由于FIN和ACK不能一起发送,需要四次==
 
 
 
@@ -262,7 +310,7 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 
 收到请求后重新复位计时器，时间通常2小时
 
-两小时还没有收到任何数据，S就会发送一个探测报文段，以后每隔75秒发送一次。若一连发送10个探测报文仍然没反应，S就认为C出了故障，关闭连接。
+两小时还没有收到任何数据，S就会发送一个探测报文段，以后每隔75秒发送一次。若一连发送10个探测报文仍然没反应，S就认为C出了故障，关闭连接
 
 
 
@@ -272,7 +320,7 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 
 1. 浏览器根据域名,去调操作系统的gethostbyname()
 2. gethostbyname()首先检查域名是否在本地Hosts里
-3. 本地Hosts没有,通过网卡给DNSS发UDP请求,接收结果并返回给浏览器
+3. 本地Hosts没有,通过网卡给DNS服务器发UDP请求,接收结果并返回给浏览器
 4. 浏览器拿到解析的IP地址，建立TCP连接
 5. 向IP发送HTTP请求
 6. S处理请求并返回响应结果
@@ -358,12 +406,6 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 
 
 
-## DNS
-
-
-
-
-
 
 
 
@@ -381,12 +423,12 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
   * https SSL＋HTTP协议构建的可进行加密传输、身份认证的网络协议
 
 * 端口不同
-  * http 80。
+  * http 80
   * https 443．
 
 * 证书申请方式不同
-  * http：免费申请。
-  * https：需要到ca申请证书，免费证书很少，需要交费。
+  * http：免费申请
+  * https：CA申请证书，免费证书少
 
 
 
@@ -399,9 +441,9 @@ DNS域名系统（Domain Name System）
 
 
 1. 根域名服务器：并不直接把待查询的域名直接解析出IP地址，而是告诉本地域名服务器应当找顶级域名服务器的IP
-2. 顶级域名服务器：负责管理在该顶级域名服务器注册的二级域名。
-3. 权限域名服务器：负责一个“区”的域名服务器。
-4. 本地域名服务器：离用户最近的DNS，当一个主机发出DNS查询请求时，这个查询请求报文就发送给本地域名服务器。
+2. 顶级域名服务器：负责管理该顶级域名下的二级域名
+3. 权限域名服务器：负责一个“区”的域名服务器
+4. 本地域名服务器：离用户最近的DNS，当一个主机发出DNS查询请求时，这个查询请求报文就发送给本地域名服务器
 
 
 
@@ -424,9 +466,9 @@ DNS域名系统（Domain Name System）
 ![](image.assets/域名解析.png)
 
 * 浏览器缓存
-  * 缓存大小有/时间有限制，通常情况下为几分钟到几小时不等，域名被缓存的时间限制可以**通过TTL属性设置**
-  * 缓存时间太长，一旦IP变化，会导致被客户端缓存的域名无法解析到变化后的IP地址
-  * 如果设置时间太短，会导致用户每次访问网站都要重新解析一次域名
+  * 缓存大小/时间有限制，通常情况下为几分钟到几小时不等，域名被缓存的时间**通过TTL属性设置**
+    * 缓存时间长，一旦IP变化，会导致被客户端缓存的域名无法解析到变化后的IP
+    * 时间太短，会导致用户每次访问网站都要重新解析一次域名
 
 * 操作系统缓存  操作系统也有域名解析的过程
   * Windows C:\Windows\System32\drivers\etc\hosts
@@ -434,7 +476,7 @@ DNS域名系统（Domain Name System）
   * 用户可以将任何域名解析到任何能够访问的IP地址,利于测试
   * 正是因为有这种本地DNS解析的规程，黑客把特定的域名解析到他指定的IP地址上，==域名劫持==
 
-* 本地域名服务器 LDNS  通常都提供给用户本地互联网接入的一个DNS解析服务
+* 本地域名服务器 LDNS  提供给用户本地互联网接入的DNS解析服务
   * 性能高，会缓存域名解析结果，当然缓存时间是受到域名的失效时间控制的。大约80%的域名解析到这里就结束了，LDNS承担了域名解析主要工作
   * 通常会在用户所在城市的某个角落，不会很远
   * Windows ipconfig，Linux cat /etc/resolv.conf 查询配置的DNS服务器
