--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -203,54 +203,7 @@ class House{
 
 
 
-## 适配器模式 adapter
 
-
-
-原有接口与客户端不匹配,==无需修改原接口.通过关联方式将对象放入适配器中==,通过访问适配器的方法来间接操作对象,从而可以添加新的方法
-
-另一种方法	继承,通过子类来访问父类原有的功能
-
-![](image.assets/适配器模式.png)
-
-
-
-新闻联播为失聪人士提供了手语,让有障碍的人也能正常观看
-
-```java
-public class AdapterPattern {
-    public static void main(String[] args) {
-    //通过Adapter适配器来操作Speaker对象
-        new Adapter(new Speaker()).translate();}
-}
-
-//被适配类
-class Speaker {
-    public String speak() {
-        return "搬砖";   }}
-
-//原接口
-interface Translator {  String translate();}
-
-class Adapter implements Translator {
-    private Speaker speaker;
-
-    public Adapter(Speaker speaker) {
-        this.speaker = speaker;}
-        
-	//适配器
-    @Override
-    public String translate() {
-        return "翻译之后" + speaker.speak();}}
-```
-
-
-
-### 适配器与装饰器区别
-
-适配器调节了原接口与被适配对象,==并未修改原接口==
-
-装饰器对原有接口作拓展,修改了原接口 
 
 
 
@@ -278,6 +231,68 @@ class Adapter implements Translator {
 
 
 
+## 适配器模式 adapter
+
+
+
+
+
+- target（目标接口）:所要转换的所期待的接口
+- Adaptee（源角色）：被适配类
+- Adapter（适配器）：将源角色适配成目标接口，一般持有源接口的引用/继承源接口，且实现目标接口
+
+原有接口与客户端不匹配,==无需修改原接口.通过关联方式将对象放入适配器中==,通过访问适配器的方法来间接操作对象,从而可以添加新的方法
+
+另一种方法	继承,通过子类来访问父类原有的功能
+
+![](image.assets/适配器模式.png)
+
+
+
+新闻联播为失聪人士提供了手语,让有障碍的人也能正常观看
+
+```java
+public class AdapterPattern {
+    public static void main(String[] args) {
+    //通过Adapter适配器来操作Speaker对象
+        new Adapter(new Speaker()).translate();}
+}
+
+//被适配类
+class Speaker {
+    public String speak() { return "搬砖";   }
+}
+
+//原接口
+interface Translator {  String translate();}
+
+class Adapter implements Translator {
+    private Speaker speaker;
+
+    public Adapter(Speaker speaker) {  this.speaker = speaker;}
+        
+	//适配器
+    @Override
+    public String translate() {  return "翻译之后" + speaker.speak();}
+}
+```
+
+
+
+### 适配VS装饰
+
+
+
+适配器目的是从一个接口转变为另一个接口,修改了原接口,对于操作对象，经过一次适配之后，基本上就是不同的东西了
+
+装饰器未对原接口进行修改,只增强原有对象的功能,或改变原有对象的处理方式而提升性能,强调增强，经过装饰后，操作对象的原有功能依然存在，并且添加了一些更多的功能
+
+
+
+
+
+
+
 ## 装饰器 Decorator
 
 
@@ -286,9 +301,11 @@ class Adapter implements Translator {
 
 运用了关联关系,把对象嵌入到装饰器中,由装饰器内部操作对象
 
+==对被装饰类的使用者透明==
 
 
-![image-20200907094120213](image.assets/装饰器模式.png)
+
+![](image.assets/装饰器模式.png)
 
 
 
@@ -305,9 +322,7 @@ interface Robot { void doSomething();}
 //被装饰的构件
 class FirstRobot implements Robot {
     @Override
-    public void doSomething() {
-        System.out.println("搬砖");
-    }
+    public void doSomething() {  System.out.println("搬砖"); }
 }
 
 //装饰器
@@ -393,6 +408,16 @@ IO如果单纯使用继承，无疑需要很多的类。比如说，操作文件
 
 
 
+**装饰器 vs 继承**
+
+- 装饰器在运行时组成特征；继承在编译时组成特征。
+- 装饰器由多个协作对象组成；继承产生一个明确类型的对象。
+- 可以混合和匹配多个装饰；多重继承在概念上是困难的。
+
+
+
+
+
 
 
 
@@ -404,6 +429,8 @@ IO如果单纯使用继承，无疑需要很多的类。比如说，操作文件
 为==内部复杂的系统==提供一个**一致的接口**，使这些子系统更加容易被访问
 
 ![](image.assets/外观模式.png)
+
+
 
 * 优点	内外部的通信通过**统一的通信对象**进行,通信对象是高层次的,将内部复杂的操作进行封装,使得外观上简洁,内部复杂
 * 缺点    **不符合开闭原则**	当内部发生改变时,外观也需要修改
@@ -801,9 +828,13 @@ class Backup implements Memento {
 
 
 
-定义算法骨架，**将算法的一些步骤延迟到子类**中，使得子类可以不改变该算法结构的情况下重定义该算法的某些特定步骤。==行为由父类控制,实现由子类完成==
+定义算法骨架，**将算法的一些步骤延迟到子类**中，使得子类可以不改变该算法结构的情况下重定义该算法的某些特定步骤
 
-![image-20200907094120213](image.assets/模板方法.png)
+==行为由父类控制,实现由子类完成==
+
+
+
+![](image.assets/模板方法.png)
 
 
 
@@ -832,6 +863,10 @@ class CookingFood extends Cooking {
     @Override
     protected void step2() {   System.out.println("面包片,老干妈"); }}
 ```
+
+
+
+
 
 
 
