--- a/软件设计师/计算机网络.md
+++ b/软件设计师/计算机网络.md
@@ -642,6 +642,151 @@ A 记录和 CNAME 记录有什么区别
 
 
 
+无状态
+同一个客户端第二次访问同一个Web服务器上的页面时，服务器无法知道这个客户曾经访问过。HTTP的无状态性简化了服务器的设计，使其更容易支持大量并发的HTTP请求
+
+
+
+
+
+**HTTP**
+超文本传输协议（Hyper Text Transfer Protocol，基于请求与响应模式、无状态、按照URL指示，将超文本文档从一台主机(Web服务器)传输到另一台主机(浏览器)的应用层协议，以实现超链接的功能
+
+**Hyper Text**
+超文本是用超链接的方法，将各种不同空间的文字信息组织在一起的网状文本。超文本更是一种用户界面范式，用以显示文本及与文本之间相关的内容。现时超文本普遍以电子文档方式存在，其中的文字包含有可以链结到其他位置或者文档的连结，允许从当前阅读位置直接切换到超文本连结所指向的位置。这些链接使用URL表示。最常见的超文本格式是超文本标记语言HTML
+
+**URL**
+url是统一资源定位符(Uniform Resource Locator)，对可以从互联网上得到的资源的位置和访问方法的一种简洁的表示，是互联网上标准资源的地址。互联网上的每个文件都有一个唯一的URL，它包含的信息指出文件的位置以及浏览器应该怎么处理它。URL**由协议、主机和端口(默认为80)以及文件名三部分构成**
+
+
+
+![](image.assets/HTTP头部.png)
+
+
+
+USER-agent 浏览器标识
+Server：响应头包含处理请求的原始服务器的软件信息
+Referer：浏览器向 WEB 服务器表明自己是从哪个 网页/URL 获得/点击 当前请求中的网址/URL。
+Location：WEB 服务器告诉浏览器，试图访问的对象已经被移到别的位置了，到该头部指定的位置去取。
+
+
+
+
+
+## 状态码
+
+
+
+* 1xx	服务器正在处理请求
+
+* 2xx	成功处理了请求
+
+* 3xx (重定向)表示要完成请求，需要进一步操作
+  * 304 (未修改) 自从上次请求后，请求的网页未修改过。 服务器返回此响应时，不会返回网页内容
+
+* 4xx(请求错误)请求可能出错，妨碍服务器的处理
+  * 400 (错误请求) 服务器不理解请求的语法
+
+  * 403 (禁止) 服务器拒绝请求
+
+* 5xx(服务器错误)
+  * 500 (服务器内部错误) 服务器遇到错误，无法完成请求
+  * 501 (尚未实施) 服务器不具备完成请求的功能。 例如，服务器无法识别请求方法
+  * 502 (错误网关) 服务器作为网关或代理，从上游服务器收到无效响应
+  * 503 (服务不可用) 服务器目前无法使用(由于超载或停机维护)
+  * 504 (网关超时) 服务器作为网关或代理，但是没有及时从上游服务器收到请求
+  * 505 (HTTP 版本不受支持) 服务器不支持请求中所用的 HTTP 协议版本
+
+
+
+
+
+## SSL 安全套接字协议
+
+
+
+SSL是信息传输的加密方法，而https是信息传输加密成功后的结果
+
+
+
+443端口
+
+为网络通信提供安全及数据完整性的一种安全协议
+
+SSL协议可以保护正常运行于TCP之上的任何应用协议
+
+是传输层与应用层之间的协议，高层的应用协议能透明地建立在SSL协议之上；**SSL协议在应用层之前就完成了加密算法、通信密钥的协商和服务器的认证工作，此后应用层发送的数据都会被加密，保证通信的安全性**
+
+
+
+SSL协议提供的安全通道有以下三个特性
+1.机密性：SSL协议使用**密钥加密通信数据**
+2.可靠性：服务器和客户都会被认证，客户的认证是可选的
+3.完整性：SSL协议会对传送的数据进行完整性检
+
+
+
+SSL提供的服务
+1.认证用户和服务器，确保数据发送到正确的客户机和服务器
+2.加密数据以防止数据中途被窃取
+3.维护数据的完整性，确保数据在传输过程中不被改变
+
+
+
+**SSL的数据包结构**
+
+![](image.assets/SSL的数据包结构.png)
+
+
+
+SSL协议的分层模型原理：
+SSL协议是一个分层的协议，共有两层组成。处于SSL协议的底层的是SSL记录层协议(SSL Record Protocol)，它位于可靠的传输层协议(如TCP)之上，用于封装高层协议的数据。其中SSL握手协议(SSL Handshake Protocol)允许服务方和客户方互相认证，并在应用层协议传送数据之前协商出一个加密算法和会话密钥（类似于IPSEC的第一阶段）。
+
+**握手协议(SSL Handshake Protocol)**
+允许服务方和客户方互相认证，并在应用层协议传送数据之前协商出一个加密算法和会话密钥。握手协议可以用于建立一个新的会话，也可以恢复一个先前存在的会话，但每次握手都会建立一个全新的连接
+功能：
+1.协商SSL协议的版本
+2.协商加密套件
+3.协商密钥参数
+4.验证通讯双方的身份(可选)
+5.建立SSL连接
+
+
+
+
+
+![](image.assets/SSL.png)
+
+
+
+1.网络连接建立，SSL客户端发送消息，消息中包含SSL版本号、密码设置、可实现的算法列表、随机数以及服务器使用SSL协议通信所需的其它信息；
+2.SSL服务器端回应消息，确定SSL版本号、加密算法和压缩算法；
+3.SSL服务器发出服务器数字证书；
+4.SSL客户端的身份认证是可选的；
+5.客户端生成预主密钥pre_master_secret，用服务器的公钥加密后返回服务器，服务器利用自己的私钥解密后得到会话密钥；
+\6. 若服务器要求客户认证，客户机会向服务器随加密的pre_master_secret一起发送签名的数据和客户自己的证书。
+\7. 服务器若认证客户成功，使用私钥加密pre_master_secret，然后执行一系列步骤生成master secret。否则会话终止。
+\8. 客户机与服务器使用master secret生成会话密钥。该密钥是对称密钥，用于加密和解密在SSL会话期间交换的信息，检验信息完整性。
+\9. CCS：发送消息通知以后从客户机来的消息将用会话密钥加密。客户机然后发送一条独立的（加密的）消息表明握手的客户机部分已经完成。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ## HTTP1.0
 
 
@@ -650,17 +795,7 @@ A 记录和 CNAME 记录有什么区别
 
 * 每次请求都会重新建立/断开`TCP`连接，耗费资源
 
-* 某些S对`Connection: keep-alive`的`Header`进行了支持，完成`HTTP`请求后，不断开连接,连接可以被重用,SSL的开销也可以避免
-
-
-
-
-
-
-
-
-
-
+* 某些S对`Connection: keep-alive`的`Header`进行了支持，完成`HTTP`请求后，不断开连接,连接可以被重用,避免SSL的开销
 
 
 
@@ -729,6 +864,54 @@ A 记录和 CNAME 记录有什么区别
 
 
 
+主要基于 SPDY 协议（Google开发的基于TCP的应用层协议，用以最小化网络延迟，提升网络速度，优化用户的网络使用体验）
+
+
+
+**2 VS 1.1**
+
+2采用二进制格式而非文本格式
+
+**2是完全多路复用的，而非有序并阻塞的——只需一个连接即可实现并行**
+
+使用报头压缩，2降低了开销
+
+2让服务器可以将响应主动“推送”到客户端缓存中
+
+多路复用对前端优化性能有很大的帮助
+
+
+
+**什么是多路复用**
+
+在 HTTP 1.1 中，发起一个请求是这样的：
+
+浏览器请求 url -> 解析域名 -> 建立 HTTP 连接 -> 服务器处理文件 -> 返回数据 -> 浏览器解析、渲染文件 
+
+这个流程最大的问题是，每次请求都需要建立一次 HTTP 连接，也就是我们常说的3次握手4次挥手，这个过程在一次请求过程中占用了相当长的时间，而且逻辑上是非必需的，因为不间断的请求数据，第一次建立连接是正常的，以后就占用这个通道，下载其他文件，这样效率多高啊！
+
+为了解决这个问题， HTTP 1.1 中提供了 Keep-Alive，允许我们建立一次 HTTP 连接，来返回多次请求数据
+
+
+
+但是这里有两个问题：
+
+HTTP 1.1 基于串行文件传输数据，因此这些请求必须是有序的，所以实际上我们只是节省了建立连接的时间，而获取数据的时间并没有减少
+
+最大并发数问题，假设我们在 Apache 中设置了最大并发数 300，而因为浏览器本身的限制，最大请求数为 6，那么服务器能承载的最高并发数是 50
+
+
+
+而 2 引入二进制数据帧和流的概念，其中帧对数据进行顺序标识，这样浏览器收到数据之后，就可以按照序列对数据进行合并，而不会出现合并后数据错乱的情况。同样是因为有了序列，服务器可以并行传输数据
+
+2对同一域名下所有请求都是基于流，也就是说同一域名不管访问多少文件，也只建立一路连接,提高并发
+
+
+
+![](image.assets/HTTP2.0.png)
+
+
+
 
 
 
@@ -762,6 +945,8 @@ A 记录和 CNAME 记录有什么区别
 
 ## 层次化网络设计
 
+
+
 ![](image.assets/image-20200823112201972.png)
 
 核心层		核心交换机	快速高效的数据分发 ,冗余控制
@@ -773,6 +958,8 @@ A 记录和 CNAME 记录有什么区别
 
 
 ## 计算机网络分类
+
+
 
 ![](image.assets/image-20200823112805243.png)
 
@@ -791,11 +978,15 @@ A 记录和 CNAME 记录有什么区别
 
 ## 网络接入技术
 
+
+
 ![](image.assets/image-20200823113027802.png)
 
 
 
 # HTML
+
+
 
 ![](image.assets/image-20200823113206777.png)
 
