--- a/算法+数据结构.md
+++ b/算法+数据结构.md
@@ -914,25 +914,79 @@ remove() 的通用版本，它可能会使用到 shiftDown 和 shiftUp。
 
 
 
+==图不允许没有顶点，但是可以没有边==
+
+
+
+无向图
+
+
+
+有向图
+
+
+
+
+
 * 完全图
   * 每对顶点都有一条边相连的无向图
   * 每对顶点都有2条有向边互相连接的有向图
 
-![image-20200914071713776](image.assets/image-20200914071713776.png)
+![](image.assets/image-20200914071713776.png)
+
+
+
+## 连通图
+
+
+
+在无向图 G 中，如果从顶点 v 到顶点 v' 有路径，则称 v 和 v' 是连通的。 如果对于图中任意两个顶点 vi 、vj ∈E， vi，和vj都是连通的，则称 G 是**连通图**，否则图为**非连通图**
+
+
+
+![](image.assets/非连通图.jpg)
+
+A、B、C、D是连通的，但是其中任一顶点与顶点E或者顶点F之间没有路径，因此为非连通图
 
 
 
 
 
-## 图的存储
+
+
+顶点的度：与V关联的边个数 TD(V)=ID(V)+OD(V)
+
+入度：指向V的边个数，记为 ID(V)
+
+出度：			记为 OD(V)
 
 
 
-### 邻接矩阵
+邻接
+
+如果图包含（u,v），v与u邻接。==无向图的邻接关系是对称的==,可以得到u与v也邻接
+
+
+
+路径
+
+在图中，依次遍历顶点序列之间的边所形成的轨迹
+
+
+
+
+
+
+
+## 邻接矩阵
+
+
+
+
 
 ![](image.assets/邻接矩阵.png)
 
-**图有n个节点 ,就要用n*n的矩阵存储**
+**图有n个节点,就要用n*n的矩阵存储**
 
 表示上下三角时 ,耗费空间
 
@@ -940,9 +994,263 @@ remove() 的通用版本，它可能会使用到 shiftDown 和 shiftUp。
 
 
 
-### 邻接表
 
-![image-20200914072817059](image.assets/image-20200914072817059.png)
+
+
+
+### 无向图存储
+
+
+
+（1）顶点数组长度为图的顶点数目n。边数组为n X n的二维数组
+
+（2）1代表邻接，0代表不邻接
+
+（3）==无向边顶点的邻接关系是对称的，边数组为对称二维数组==
+
+（4）顶点与自身之间并未邻接关系，**对角线上的元素均为0**
+
+（5）顶点的度即为顶点所在的行/列中1的数目
+
+
+
+![](image.assets/无向图存储.jpg)
+
+
+
+### 有向图存储
+
+
+
+（1）顶点数组长度为图的顶点数目n。边数组为n X n的二维数组
+
+（2）**1代表i与j邻接，且i为尾，j为头**
+
+（3）在有向图中，由于边存在方向性，因此数组**不一定为对称**数组
+
+（4）对角线上元素为0
+
+（5）行中1个数:出度	列:入度
+
+
+
+![](image.assets/有向图存储.jpg)
+
+**数组存储方式优点：** 数组存储方式容易实现图的操作。例如：求某顶点的度、判断顶点之间是否有边（弧）、找顶点的邻接点等等
+
+**数组存储方式缺点：** 采用数组存储方式，图若有n个顶点则需要n^2个单元。 当==顶点多，边少时，此时图为稀疏图==，浪费空间
+
+
+
+
+
+
+
+
+
+
+
+## 邻接表
+
+
+
+使用数组存储时，主要有以下三个问题：
+
+> （1）对于一个图，若图中的顶点数目过大，则无法使用邻接矩阵进行存储。因为在分配数组内存时可能会导致内存分配失败
+>
+> （2）对于某些稀疏图（即顶点数目多，边数目少），创建的数组大小很大，而真正存储的有用信息又很少，这就造成了空间上的浪费
+>
+> （3）有时两个点之间不止存在有一条边，这是用邻接矩阵就无法同时表示两条以上的边
+
+
+
+数组存储和链表相结合
+
+在邻接表中，对图中的每个顶点建立一个单链表，第 i 个单链表中的结点依附于顶点 Vi 的边。链表中的节点称为表节点，共有3个域
+
+adjvex存储与Vi邻接的点在图中的位置，nextarc存储下一条边或弧的结点，data存储与边或弧相关的信息如权值
+
+![](image.assets/表节点.png)
+
+
+
+除表节点外，需要在数组中存储**头节点**，**头结点**由两个域组成，分别指向链表中第一个顶点和存储Vi的名或其他信息
+
+![](image.assets/头节点.png)
+
+
+
+其中，data域中存储顶点相关信息，firstarc指向链表的第一个节点。 **无向图采用邻接表方式存储** 例如：图6.1所示的无向图采用邻接表存储。
+
+
+
+
+
+![](image.assets/邻接表存储1.jpg)
+
+采用邻接表方式存储图 6.1 中的无向图，绘图过程中忽略边节点的info信息，头结点中的 data 域存储顶点名称。以V1顶点为例，V1顶点的邻接顶点为V2、V3、V4，则可以创建3个表节点，表节点中adjvex分别存储V2、V3、V4的索引1、2、3，按照此方式，得到的邻接表为：
+
+![](image.assets/邻接表存储2.jpg)
+
+
+
+**无向图的邻接表存储特性：**
+
+> （1）数组中头节点的数目为图的顶点数目。 （2）链表的长度即为顶点的度。例如：V1顶点的度为3，则以V1为头节点的链表中表节点的数目为3。
+
+**有向图采用邻接表方式存储** 例如：图 6.3 所示的有向图采用邻接表存储。
+
+
+
+
+
+
+
+![](image.assets/有向图邻接表存储1.jpg)
+
+
+
+
+
+采用邻接表方式存储图6.3中的有向图，绘图过程中忽略边节点的info信息，头结点中的data域存储顶点名称。以V1顶点为例，V1顶点的邻接顶点为V2、V3、V4，但是以V1顶点为尾的边只有两条，即<V1 , V3>和<V1 , V4>因此，创建2个表节点。表节点中adjvex分别存储V3、V4的索引2、3，按照此方式，得到的邻接表为
+
+
+
+
+
+![](image.assets/有向图邻接表存储2.jpg)
+
+
+
+
+
+**有向图的邻接表存储特性：**
+
+> （1）数组中表节点的数目为图的顶点数目。 （2）链表的长度即为顶点的出度。例如V1的出度为2，V1为头节点的链表中，表节点的数目为2。 （3）顶点Vi的入度为邻接表中所有adjvex值域为i的表结点数目。例如：顶点V3的入度为4，则链表中所有adjvex值域为2的表结点数目为4。
+
+**注：图采用邻接表的方式表示时，其表示方式是不唯一的。这是因为在每个顶点对应的单链表中，各边节点的链接次序可以是任意的，取决于建立邻接表的算法以及边的输入次序。**
+
+
+
+
+
+
+
+
+
+
+
+
+
+## 逆邻接表
+
+
+
+在邻接表中，可以轻易的得出顶点的出度，但是想要得到顶点的入度，则需要遍历整个链表。为了便于确定顶点的入度，可以建立有向图的逆邻接表。逆邻接表的建立与邻接表相反。 **采用逆邻接表的方式存储图3.2所示的无向图。以V3顶点为例，V3顶点的邻接顶点为V1、V2、V4、V5，以V3顶点为头的边有4条，即<V1 , V3>、<V2 , V3>、<V4 , V3>、<V5 , V3>因此，创建4个表节点。表节点中adjvex分别存储V0、V1、V3、V4的索引0、1、3、4，按照此方式，得到的逆邻接表为：**
+
+
+
+![](image.assets/逆邻接表.jpg)
+
+
+
+
+
+## 十字链表
+
+
+
+对于有向图而言，邻接链表的缺陷是要查询某个顶点的入度时需要遍历整个链表，而逆邻接链表在查询某个顶点的出度时要遍历整个链表。为了解决这些问题，十字链表将邻接链表和逆邻接链表综合了起来，而得到的一种十字链表。在十字链表中，每一条边对应一种边节点，每一个顶点对应为顶点节点。
+
+**顶点节点** 顶点节点即为头节点，由3个域构成，具体形式如下：
+
+
+
+
+
+![](image.assets/顶点节点.jpg)
+
+其中，data域存储与顶点相关的信息，firstin和firstout分别指向以此顶点为头或尾的第一个边节点。 **边节点** 在边节点为链表节点，共有 5 个域，具体形式如下：
+
+
+
+![](image.assets/边节点.png)
+
+
+
+其中，尾域tailvex和头域headvex分别指向尾和头的顶点在图中的位置。链域hlink指向头相同的下一条边，链域tlink指向尾相同的下一条边。info 存储此条边的相关信息。 例如：图8.1所示的有向图，采用十字链表存储图方式
+
+
+
+
+
+![](image.assets/十字链表1.jpg)
+
+
+
+采用十字链表的方式存储图8.1中的有向图，绘图过程忽略边节点中的info信息，表头节点中的data域存储顶点名称。以V1顶点为例，顶点节点的data域存储V1顶点名，firstin存储以V1顶点为头第一个边节点，以V1顶点为头边为<V3 , V1>，firstout存储以以V1顶点为尾第一个边节点，对应边为<V1 , V2>。按照此规则，得到的十字链表存储为：
+
+
+
+
+
+![](image.assets/十字链表2.jpg)
+
+**注：采用十字链表存储时，表头节点仍然使用数组存储，采用下标索引方式获取。**
+
+
+
+
+
+
+
+## **邻接多重表**
+
+
+
+对于无向图而言，其每条边在邻接链表中都需要两个结点来表示，而邻接多重表正是对其进行优化，让同一条边只用一个结点表示即可。邻接多重表仿照了十字链表的思想，对邻接链表的边表结点进行了改进。
+
+重新定义的边结点结构如下图：
+
+
+
+![](image.assets/多重表边节点.png)
+
+
+
+其中，ivex和jvex是指某条边依附的两个顶点在顶点表中的下标。 ilink指向依附顶点ivex的下一条边，jlink指向依附顶点jvex的下一条边。info存储边的相关信息。
+
+重新定义的顶点结构如下图：
+
+
+
+![](image.assets/多重表顶点.jpg)
+
+
+
+其中，data存储顶点的相关信息，firstedge指向第一条依附于该顶点的边。 例如：图9.1所示的无向图，采用邻接多重表存储图。
+
+
+
+![](image.assets/多重表1.jpg)
+
+
+
+图 9.1 所示的无向图，采用邻接多重表存储，以 V0 为例，顶点节点的data域存储V0名称，firstedge 指向(V0 , V1)边，边节点中的ilink指向依附V0顶点的下一条边(V0 , V3)，jlink指向依附V1顶点的下一条边(V1 , V2)，按照此方式建立邻接多重表：
+
+
+
+
+
+![](image.assets/多重表2.jpg)
+
+
+
+
+
+
+
+![](image.assets/image-20200914072817059.png)
 
 V1 ->2 6 -> 4 1
 
@@ -964,7 +1272,15 @@ V1 ->2 6 -> 4 1
 
 
 
+
+
+
+
+
+
 ## 图的遍历
+
+
 
 ![](image.assets/图的遍历.png)
 
@@ -974,6 +1290,8 @@ V1 ->2 6 -> 4 1
 
 ## 拓扑图 AOV网络
 
+
+
 用有向边表示活动的先后
 
 ![](image.assets/图的拓扑排序.png)
@@ -982,7 +1300,9 @@ V1 ->2 6 -> 4 1
 
 ## 最小生成树
 
-![image-20200914074830349](image.assets/image-20200914074830349.png)
+
+
+![](image.assets/image-20200914074830349.png)
 
 
 
